--- a/package.json
+++ b/package.json
@@ -56,10 +56,14 @@
   },
   "dependencies": {
     "es6-promise": "^2.3.0",
+    "jquery": "^2.1.4",
     "lodash": "3.9.3",
+    "object-assign": "^3.0.0",
     "react": "^0.13.0",
-    "react-router": "^1.0.0-beta2",
+    "react-router": "^1.0.0-beta3",
     "reflux": "^0.2.7",
-    "superagent": "1.2.0"
+    "superagent": "1.2.0",
+    "reqwest": "^1.1.5",
+    "when": "^3.7.3"
   }
 }
